--- a/kod2.html
+++ b/kod2.html
@@ -7,17 +7,17 @@
 <pre>
 
 <textarea style="height: 400px; width: 400px;">
-#include <cstdlib>
-#include <iostream>
-#include <stdio.h>
-#include <conio.h>
+#include &lt;cstdlib&gt;
+#include &lt;iostream&gt;
+#include &lt;stdio.h&gt;
+#include &lt;conio.h&gt;
 
 using namespace std;
 int main (int argc, char *argv[])
 {
-    for (int i=0;i<=19;i++)
+    for (int i=0;i&lt;=19;i++)
         {
-              cout<<"*"<<endl;
+              cout&lt;&lt;"*"&lt;&lt;endl;
         }
     
     
@@ -29,7 +29,7 @@ int main (int argc, char *argv[])
 
 
 
->
+
 </textarea>
 </body>
 </html>
