--- a/while.html
+++ b/while.html
@@ -9,7 +9,7 @@
  do pętli i wykonujemy instrukcje z niej.</p>
  <br><br>
  
- <img src="schemat.png" width="90%">
+ <img src="schemat.PNG" width="90%">
 
 </body>
 </html>
