--- a/kod2.html
+++ b/kod2.html
@@ -4,9 +4,9 @@
 </head>
 <body>
 <p>
-<pre>
 
-<textarea style="height: 400px; width: 400px;">
+
+<textarea cols="76" rows="40">
 #include &lt;cstdlib&gt;
 #include &lt;iostream&gt;
 #include &lt;stdio.h&gt;
@@ -26,9 +26,6 @@ int main (int argc, char *argv[])
     system("PAUSE");
     return EXIT_SUCCESS;
 }
-
-
-
 
 </textarea>
 </body>
