--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 			<br>
 			<a href="rodzaje.html" target="strony">2) rodzaje petli</a>
 			<br>
-			<a href="while.html" target="strony">2) petla while</a>
+			<a href="while.html" target="strony">3) petla while</a>
+			<br>
+			<a href="algorytm.html" target="strony">4) alorytmy</a>
+			<br>
+			<a href="ascii.html" target="strony">5) kody ASCII</a>
 		</td>
 		<td align="center"><iframe width="650" height="650" name="strony" src="definicja.html" border="0"></iframe>
 		</td>
@@ -22,6 +26,55 @@
 			<a href="kod2.html" target="strony">kod do przykladu 27</a>
 			<br>
 			<a href="screen2.html" target="strony">zrzut ekranu 2</a>
+			<br>
+			<a href="30ascreeny.html" target="strony">30a zrzuty</a>
+			<br>
+			<a href="30akod.html" target="strony">30a kod</a>
+			<br>
+			<a href="kod30.html" target="strony">kod do zadania 30</a>
+			<br>
+			<a href="30screeny.html" target="strony">30 zrzuty</a>
+			<br>
+			<a href="32akod.html" target="strony">32a kod</a>
+			<br>
+			<a href="32ascreeny.html" target="strony">32a zrzuty</a>
+			<br>
+			<a href="32dkod.html" target="strony">32d kod</a>
+			<br>
+			<a href="32dscreeny.html" target="strony">32d zrzuty</a>
+			<br><br>
+			<br>
+			<a href="doskonala.html" target="strony">doskonala zrzuty</a>
+			<br>
+			<a href="doskonala_kod.html" target="strony">doskonala kod</a>
+			<br>
+			<a href="iloczynzgranicami.html" target="strony">iloczyn z granicami zrzuty</a>
+			<br>
+			<a href="iloczynzgranicami_kod.html" target="strony">iloczyn z granicami kod</a>
+			<br>
+			<a href="silnia.html" target="strony">silnia zrzuty</a>
+			<br>
+			<a href="silnia_kod.html" target="strony">silnia kod</a>
+			<br>
+			<a href="sumazgranicami(parzyste).html" target="strony">suma z granicami(parzyste) zrzuty</a>
+			<br>
+			<a href="sumazgranicami(parzyste)_kod.html" target="strony">suma z granicami(parzyste) kod</a>
+			<br>
+			<a href="sumazgranicami.html" target="strony">suma z granicami zrzuty</a>
+			<br>
+			<a href="sumazgranicami_kod.html" target="strony">suma z granicami kod</a>
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
 		</td>
 	</tr>
 </table>
